--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
- <link href="dist/css/flat-ui.css" rel="stylesheet">
+ <link href="resources/dist/css/flat-ui.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="resources/style.css" rel="stylesheet">
   </head>
 
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron" id="Jumbotron-profile">
-        <img src="Avatar.png" class="img-circle" alt="Image profile" id="avatar">
+        <img src="resources/Avatar.png" class="img-circle" alt="Image profile" id="avatar">
         <p id="Titre-Profile">Michel Kansou</p>
           <p id="Sous-Titre">Développeur</p>
     </div>
@@ -155,8 +155,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-      <script src="dist/js/vendor/jquery.min.js"></script>
-    <script src="dist/js/vendor/video.js"></script>
-    <script src="dist/js/flat-ui.min.js"></script>
+      <script src="resources/dist/js/vendor/jquery.min.js"></script>
+    <script src="resources/dist/js/vendor/video.js"></script>
+    <script src="resources/dist/js/flat-ui.min.js"></script>
   </body>
 </html>
