--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
            <a href="https://twitter.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-twitter" id="circule-Social" alt="twitter"><i class="fa fa-twitter"></i></a>
            <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
            <a href="mailto:michel.kansou@viacesi.fr" class="btn azm-social azm-size-64 azm-circle azm-email-2" id="circule-Social" alt="email"><i class="fa fa-envelope"></i></a>
-           <a href="#fakelink" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
+           <a href="resources/Michel Kansou CV.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
                     </div>
                 </div>
 
