--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron" id="Jumbotron-profile">
-        <img src="resources/Avatar.png" class="img-circle" alt="Image profile" id="avatar">
+        <img src="resources/Images/Avatar.png" class="img-circle" alt="Image profile" id="avatar">
         <p id="Titre-Profile">Michel Kansou</p>
           <p id="Sous-Titre">Développeur</p>
     </div>
@@ -185,6 +185,32 @@
     
         <div class="jumbotron" id="Jumbotron-propos">
       <span class="fui-eye" id="Titre-jumbotron"> - Portfolio</span>
+      <ul class="ch-grid">
+	<li>
+		<div class="ch-item ch-img-1">
+			<div class="ch-info">
+				<h3>Squart</h3>
+				<p>Jeux iOS <a href="https://itunes.apple.com/fr/app/id1032369864">En Savoir Plus</a></p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="ch-item ch-img-2">
+			<div class="ch-info">
+				<h3>LCOMLOCAL</h3>
+				<p>Site Web<a href="http://www.lcomlocal.fr/">En Savoir Plus</a></p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="ch-item ch-img-3">
+			<div class="ch-info">
+				<h3>Twelve's Light</h3>
+				<p>Mon site personnel<a href="http://www.twelves-light.com/">En Savoir Plus</a></p>
+			</div>
+		</div>
+	</li>
+</ul>
     </div>
             <div class="jumbotron" id="Jumbotron-Social-Download">
               <div class="row">
@@ -192,6 +218,7 @@
            <a href="https://www.facebook.com/assem.kansou" class="btn azm-social azm-size-64 azm-circle azm-facebook" id="circule-Social" alt="facebook"><i class="fa fa-facebook"></i></a>
            <a href="https://twitter.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-twitter" id="circule-Social" alt="twitter"><i class="fa fa-twitter"></i></a>
            <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
+           <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a>
            <a href="mailto:michel.kansou@viacesi.fr" class="btn azm-social azm-size-64 azm-circle azm-email-2" id="circule-Social" alt="email"><i class="fa fa-envelope"></i></a>
            <a href="resources/Michel Kansou CV.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
                     </div>
