--- a/index.html
+++ b/index.html
@@ -362,6 +362,9 @@
             <div class="jumbotron" id="Jumbotron-Social-Download">
               <div class="row">
                 	<div class="col-sm-8 col-sm-offset-2">
+           <a href="https://www.facebook.com/michel.kansou" class="btn azm-social azm-size-64 azm-circle azm-facebook" id="circule-Social" alt="facebook"><i class="fa fa-facebook"></i></a>
+           <a href="https://twitter.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-twitter" id="circule-Social" alt="twitter"><i class="fa fa-twitter"></i></a>
+           <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
            <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a>
            <a href="mailto:michel.kansou@viacesi.fr" class="btn azm-social azm-size-64 azm-circle azm-email-2" id="circule-Social" alt="email"><i class="fa fa-envelope"></i></a>
            <a href="resources/Michel Kansou CV.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
