--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section id="presentation">
     <div class="jumbotron" id="Jumbotron-propos">
       <span class="fui-user" id="Titre-jumbotron"> <span id="Titre-Font-jumbotron">- À Propos</span></span>
-          <p id="Text-presentation">Je me présente : Michel Kansou, actuellement étudiant ingénieur en informatique à Arras en Troisième année à l'eXia.CESI. Je suis passionné par la programmation, réalité virtuel et jeux vidéo. Dynamique, j'aime apprendre de nouvelles choses et je suis impliqué dans mes différents projets (que cela soit en autonomie ou en groupe). Ce site me permet de montrer mes différentes réalisations et de mettre à dispotion un formulaire de contact pour les personnes intéréssées par mes prestations dans le développement Mobile ou Web.</p>
+          <p id="Text-presentation">Je me présente : Michel Kansou, actuellement étudiant en 1er Cycle d'ingénieur informatique à l'eXia.CESI Arras. Je suis passionné par la programmation, réalité virtuel et jeux vidéo. Dynamique, j'aime apprendre de nouvelles choses et je suis impliqué dans mes différents projets (que cela soit en autonomie ou en groupe). Ce site me permet de montrer mes différentes réalisations et de mettre à dispotion un formulaire de contact pour les personnes intéréssées par mes prestations dans le développement Mobile ou Web.</p>
     </div>
    </section>
     
