--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                 
               </div>
               <div class="col-md-3">
-                <p id ="Titre-Stage">Mai - Juin 2015</p>
+                <p id ="Titre-Stage">May - June 2015</p>
                 <div id="textStage">
                   <p id="nomEntreprise">LCOMLOCAL</p>
                   <p id="poste-Stage">Web Developer</p>
@@ -757,7 +757,7 @@
               <p id ="Titre-Stage">2015</p>
                 <div id="textStage">
                   <p id="nomEntreprise">Squart</p>
-                  <p id="poste-Stage">Project manager</p>
+                  <p id="poste-Stage">Project Manager</p>
                   <p id="description-Stage">Creation and development of a mobile game for iOS 9 using Swift</p>
                   </div>
               </div>
