--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     else {
       changeLanFR();
     }
+    alert(language);
       </script>
     <div class="fr">
       <div class="container" id="container-FR">
