--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
 
 			<div class="cd-timeline-content">
 				<h2>Diplôme d'ingénieur en informatique</h2>
+        <p>eXia.CESI école d'ingénieur informatique, Arras</p>
 				<span class="cd-date">Juillet 2018</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -368,6 +369,7 @@
 
 			<div class="cd-timeline-content">
 				<h2>Diplôme analyste programmeur</h2>
+        <p>eXia.CESI école d'ingénieur informatique, Rouen</p>
 				<span class="cd-date">Juillet 2015</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -380,7 +382,8 @@
 
 			<div class="cd-timeline-content">
 				<h2>Bac Scientifique S, SVT</h2>
-				<span class="cd-date">2013</span>
+        <p>Lycée Guy De Maupassant, Fécamp</p>
+				<span class="cd-date">Juillet 2013</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 </section>
