--- a/index.html
+++ b/index.html
@@ -968,11 +968,12 @@
       
 <script>
    var language = window.navigator.userLanguage || window.navigator.language;
-   if (language == "en-US" || language == "en"){
-     changeLanEN();
+   alert(language);
+   if (language == "fr-fr" || language == "fr"){
+     changeLanFR();
      }
    else {
-     changeLanFR();
+     changeLanEN();
      }
 </script>
       
