--- a/index.html
+++ b/index.html
@@ -968,6 +968,7 @@
       
 <script>
    var language = window.navigator.userLanguage || window.navigator.language;
+   alert(language);
    if (language == "fr-fr" || language == "fr"){
      changeLanFR();
      }
