--- a/index.html
+++ b/index.html
@@ -968,8 +968,7 @@
       
 <script>
    var language = window.navigator.userLanguage || window.navigator.language;
-   alert(language);
-   if (language == "fr-fr" || language == "fr"){
+   if (language == "fr-fr" || language == "fr" || language == "fr-FR"){
      changeLanFR();
      }
    else {
