--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -949,7 +950,7 @@
            <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
            <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a>
            <a href="mailto:michel.kansou@viacesi.fr" class="btn azm-social azm-size-64 azm-circle azm-email-2" id="circule-Social" alt="email"><i class="fa fa-envelope"></i></a>
-           <a href="resources/Michel Kansou CV - En.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Download Resume</a>
+           <a href="resources/Michel Kansou CV-En.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Download Resume</a>
                     </div>
                 </div>
 
