--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <div class="jumbotron" id="Jumbotron-propos">
       <span class="fui-user" id="Titre-jumbotron"> <span id="Titre-Font-jumbotron">- À Propos</span></span>
           <p id="Text-presentation">Je me présente : Michel Kansou, actuellement étudiant en 1er Cycle d'ingénieur informatique à l'eXia.CESI Arras. Je suis passionné par la programmation, réalité virtuel et jeux vidéo. Dynamique, j'aime apprendre de nouvelles choses et je suis impliqué dans mes différents projets (que cela soit en autonomie ou en groupe). Ce site me permet de montrer mes différentes réalisations et de mettre à dispotion un formulaire de contact pour les personnes intéréssées par mes prestations dans le développement Mobile ou Web.</p>
+          <a href="resources/Michel Kansou CV.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
     </div>
    </section>
     
@@ -558,6 +559,7 @@
     <div class="jumbotron" id="Jumbotron-propos">
       <span class="fui-user" id="Titre-jumbotron"> <span id="Titre-Font-jumbotron">- Profile</span></span>
           <p id="Text-presentation">Hello my name is Michel Kansou currently a student in first year of an engineering programme at eXia.CESI Arras. I enjoy keeping abreast of the latest programming language, virtual reality and video games technology. Dynamic, I like learning new things and I am involved in my projects (whether independently or in groups). This site allows me to show my various achievements and make dispotion a contact form for people interested in my services in the Mobile and Web Development.</p>
+          <a href="resources/Michel Kansou CV-EN.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Download Resume</a>
     </div>
    </section>
     
