--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/Images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="resources/Images/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/Images/icons/favicon-16x16.png">
+    <link href="resources/Images/icons/icon.png" rel="icon" type="image/png" />
+    <link rel="mask-icon" href="resources/Images/icons/icon.png"/>
 
     <title>Michel Kansou</title>
     
@@ -549,7 +548,7 @@
            <a href="https://www.facebook.com/michel.kansou" class="btn azm-social azm-size-64 azm-circle azm-facebook" id="circule-Social" alt="facebook"><i class="fa fa-facebook"></i></a>
            <a href="https://twitter.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-twitter" id="circule-Social" alt="twitter"><i class="fa fa-twitter"></i></a>
            <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
-           <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a>
+           <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a><br>
            <a href="resources/Michel Kansou CV.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Télécharger mon CV</a>
                     </div>
                 </div>
@@ -1006,7 +1005,7 @@
            <a href="https://www.facebook.com/michel.kansou" class="btn azm-social azm-size-64 azm-circle azm-facebook" id="circule-Social" alt="facebook"><i class="fa fa-facebook"></i></a>
            <a href="https://twitter.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-twitter" id="circule-Social" alt="twitter"><i class="fa fa-twitter"></i></a>
            <a href="https://fr.linkedin.com/pub/michel-kansou/8a/4a3/438" class="btn azm-social azm-size-64 azm-circle azm-linkedin" id="circule-Social" alt="linkedin"><i class="fa fa-linkedin"></i></a>
-           <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a>
+           <a href="https://github.com/MichelKansou" class="btn azm-social azm-size-64 azm-circle azm-github" id="circule-Social" alt="github"><i class="fa fa-github"></i></a><br>
            <a href="resources/Michel Kansou CV-EN.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Download Resume</a>
                     </div>
                 </div>
