--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <link href="resources/Images/icons/icon.png" rel="icon" type="image/png" />
-    <link rel="mask-icon" href="resources/Images/icons/icon.svg" color="white">
+    <link rel="mask-icon" href="resources/Images/icons/icon.svg" color="black">
     <title>Michel Kansou</title>
 
   <link rel="stylesheet" href="resources/css/reset.css"> <!-- CSS reset -->
