--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <link href="resources/Images/icons/icon.png" rel="icon" type="image/png" />
-    
+
     <title>Michel Kansou</title>
 
   <link rel="stylesheet" href="resources/css/reset.css"> <!-- CSS reset -->
@@ -200,14 +200,25 @@
            <!-- Mobile -->
             <div class="col-md-3" id="Col-Competence">
               <h4 id="titre-Competence"><i class="fa fa-mobile fa-2x" id ="fa-Competence"></i>  Mobile</h4>
+
            <span>Swift
           <div class="progress">
             <div class="progress-bar" style="width: 80%;"></div>
           </div></span>
+
           <span>Xcode
           <div class="progress">
-            <div class="progress-bar" style="width: 100%;"></div>
+            <div class="progress-bar" style="width: 90%;"></div>
           </div> </span>
+
+          <span>React Native
+          <div class="progress" id="inProgress">En cours d'apprentissage ...
+          </div> </span>
+
+          <span>Atom
+          <div class="progress" id="inProgress">En cours d'apprentissage ...
+          </div> </span>
+
 
            <hr>
           <h4 id="titre-Competence"><i class="fa fa-cog fa-2x" id ="fa-Competence"></i>  Outils</h4>
@@ -260,6 +271,11 @@
           <div class="progress">
             <div class="progress-bar" style="width: 48%;"></div>
           </div></span>
+
+          <span>React
+          <div class="progress" id="inProgress">En cours d'apprentissage ...
+          </div> </span>
+
                <hr>
               <h4 id="titre-Competence"><i class="fa fa-database fa-2x" id ="fa-Competence"></i>  BDD</h4>
 
@@ -655,13 +671,23 @@
            <!-- Mobile -->
             <div class="col-md-3" id="Col-Competence">
               <h4 id="titre-Competence"><i class="fa fa-mobile fa-2x" id ="fa-Competence"></i>  Mobile</h4>
+
            <span>Swift
           <div class="progress">
             <div class="progress-bar" style="width: 80%;"></div>
           </div></span>
+
           <span>Xcode
           <div class="progress">
-            <div class="progress-bar" style="width: 100%;"></div>
+            <div class="progress-bar" style="width: 90%;"></div>
+          </div> </span>
+
+          <span>React Native
+          <div class="progress" id="inProgress">Learning in progress ...
+          </div> </span>
+
+          <span>Atom
+          <div class="progress" id="inProgress">Learning in progress ...
           </div> </span>
 
            <hr>
@@ -715,6 +741,10 @@
           <div class="progress">
             <div class="progress-bar" style="width: 48%;"></div>
           </div></span>
+
+          <span>React
+          <div class="progress" id="inProgress">Learning in progress ...
+          </div> </span>
                <hr>
               <h4 id="titre-Competence"><i class="fa fa-database fa-2x" id ="fa-Competence"></i>  DB</h4>
 
