--- a/index.html
+++ b/index.html
@@ -1025,9 +1025,6 @@
                         <!-- CONTACT DETAILS START -->
                         <div class="contact-details" style="opacity: 1;">
                                 <a href="mailto:michel.kansou@viacesi.fr" class="btn azm-social azm-size-130 azm-circle azm-email-2" id="circule-Contact" alt="email">Say<br>Hello<br><i class="fa fa-envelope"></i></a>
-                            <!-- //.speech-bubble -->
-
-                            <h3>Michel Kansou</h3>
                         </div>
                         <!-- //CONTACT DETAILS END -->
         </div>
@@ -1047,7 +1044,8 @@
            <a href="resources/Michel Kansou CV-EN.pdf" class="btn btn-default" id="DL-CV"><span class="glyphicon glyphicon-save-file" aria-hidden="true"></span>Download Resume</a>
                     </div>
                 </div>
-               <p id="copyright">Copyright &copy; 2015 Michel Kansou</p>
+              <p id="copyright" ><i class="fa fa-code"></i> with <i class="fa fa-heart"></i> by Michel Kansou. &copy;  2015 All rights reserved.</p>
+
     </div>
       </footer>
 
