--- a/index.html
+++ b/index.html
@@ -252,46 +252,49 @@
            <div class="col-md-3" id="Col-Competence">
 
               <h4 id="titre-Competence"><i class="fa fa-laptop fa-2x" id ="fa-Competence"></i>  Logiciel</h4>
-          <span>JAVA
-          <div class="progress">
-            <div class="progress-bar" style="width: 56%;"></div>
-          </div></span>
+              <span>JAVA
+              <div class="progress">
+                <div class="progress-bar" style="width: 56%;"></div>
+              </div></span>
 
-         <span>C
-          <div class="progress">
-            <div class="progress-bar" style="width: 70%;"></div>
-          </div></span>
+             <span>C
+              <div class="progress">
+                <div class="progress-bar" style="width: 70%;"></div>
+              </div></span>
 
-         <span>Lua
-          <div class="progress">
-            <div class="progress-bar" style="width: 55%;"></div>
-          </div></span>
+             <span>Lua
+              <div class="progress">
+                <div class="progress-bar" style="width: 55%;"></div>
+              </div></span>
 
-          </span>Python
-          <div class="progress">
-            <div class="progress-bar" style="width: 48%;"></div>
-          </div></span>
+              </span>Python
+              <div class="progress">
+                <div class="progress-bar" style="width: 48%;"></div>
+              </div></span>
 
-          <span>React
-          <div class="progress" id="inProgress">En cours d'apprentissage ...
-          </div> </span>
+              <span>React
+              <div class="progress" id="inProgress">En cours d'apprentissage ...
+              </div> </span>
 
-               <hr>
+              <hr>
               <h4 id="titre-Competence"><i class="fa fa-database fa-2x" id ="fa-Competence"></i>  BDD</h4>
 
 
-          <span>SQL
-          <div class="progress">
-            <div class="progress-bar" style="width: 65%;"></div>
-          </div></span>
-                    <span>MySQL
-          <div class="progress">
-            <div class="progress-bar" style="width: 60%;"></div>
-          </div></span>
-                    <span>SQL Server
-          <div class="progress">
-            <div class="progress-bar" style="width: 50%;"></div>
-          </div></span>
+              <span>SQL
+              <div class="progress">
+                <div class="progress-bar" style="width: 65%;"></div>
+              </div></span>
+                        <span>MySQL
+              <div class="progress">
+                <div class="progress-bar" style="width: 60%;"></div>
+              </div></span>
+                        <span>SQL Server
+              <div class="progress">
+                <div class="progress-bar" style="width: 50%;"></div>
+              </div></span>
+              <span>Parse
+              <div class="progress" id="inProgress">En cours d'apprentissage ...
+              </div> </span>
            </div> <!-- col-md-3 -->
 
 
@@ -761,6 +764,9 @@
           <div class="progress">
             <div class="progress-bar" style="width: 50%;"></div>
           </div></span>
+          <span>Parse
+          <div class="progress" id="inProgress">Learning in progress ...
+          </div> </span>
            </div> <!-- col-md-3 -->
 
 
