--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body>
 
     <script>
+    $(document.querySelector(".fade-in")).fadeIn(1000);
     function changeLanFR()
     {
       var frClass = document.querySelector(".fr");
@@ -223,7 +224,7 @@
           </div> </span>
 
 
-           <hr>
+          <hr>
           <h4 id="titre-Competence"><i class="fa fa-cog fa-2x" id ="fa-Competence"></i>  Outils</h4>
           <span>OS X
           <div class="progress">
@@ -264,6 +265,11 @@
               <div class="progress">
                 <div class="progress-bar" style="width: 70%;"></div>
               </div></span>
+
+              <span>C#
+              <div class="progress" id="inProgress">En cours d'apprentissage ...
+              </div> </span>
+
 
              <span>Lua
               <div class="progress">
@@ -375,6 +381,16 @@
                   <p id="description-Stage">Création et développement d'un jeu mobile pour iOS 9 avec Swift</p>
                   </div>
               </div>
+
+              <div class="col-md-3">
+              <p id ="Titre-Stage">Février - Mai 2015</p>
+                <div id="textStage">
+                  <p id="nomEntreprise">Kumquats</p>
+                  <p id="poste-Stage">Développeur Web & Mobile</p>
+                  <p id="description-Stage">- Concevoir l'architecture et le modèle de données d'une application web ou mobile </br> - Développement d'API avec le framework Symfony 2 </br> - Développement Front-end avec le framework ReactJS</p>
+                  </div>
+              </div>
+
               </div>
               </div>
               </div>
@@ -739,6 +755,10 @@
             <div class="progress-bar" style="width: 70%;"></div>
           </div></span>
 
+          <span>C#
+          <div class="progress" id="inProgress">Learning in progress ...
+          </div> </span>
+
          <span>Lua
           <div class="progress">
             <div class="progress-bar" style="width: 55%;"></div>
@@ -845,6 +865,14 @@
                   <p id="nomEntreprise">Squart</p>
                   <p id="poste-Stage">Project Manager</p>
                   <p id="description-Stage">Creation and development of a mobile game for iOS 9 using Swift</p>
+                  </div>
+              </div>
+              <div class="col-md-3">
+              <p id ="Titre-Stage">February - May 2016</p>
+                <div id="textStage">
+                  <p id="nomEntreprise">Kumquats</p>
+                  <p id="poste-Stage">Web & Mobile Developer</p>
+                  <p id="description-Stage">- Designing web and mobile application </br> - API developement with Symfony 2 </br>- Front-end developement with ReactJS </p>
                   </div>
               </div>
               </div>
