--- a/index.html
+++ b/index.html
@@ -347,15 +347,38 @@
               </section>
 
 
-
-
-
-
                <section id="experience">
             <div class="jumbotron" id="Jumbotron-experience">
               <span class="fui-document"id="Titre-jumbotron"> <span id="Titre-Font-jumbotron">- Expériences</span></span>
               <div id="container-Experience">
               <div class="row">
+
+                <div class="col-md-3">
+                <p id ="Titre-Stage">Février - Mai 2015</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">Kumquats</p>
+                    <p id="poste-Stage">Développeur Web & Mobile</p>
+                    <p id="description-Stage">- Concevoir l'architecture et le modèle de données d'une application web ou mobile </br> - Développement d'API avec le framework Symfony 2 </br> - Développement Front-end avec le framework ReactJS</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                <p id ="Titre-Stage">2015</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">Squart</p>
+                    <p id="poste-Stage">Chef de Projet</p>
+                    <p id="description-Stage">Création et développement d'un jeu mobile pour iOS 9 avec Swift</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                  <p id ="Titre-Stage">Mai - Juin 2015</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">LCOMLOCAL</p>
+                    <p id="poste-Stage">Développeur Web</p>
+                    <p id="description-Stage">Stage développement web en Responsive Design et conseil en référencement</p>
+                    </div>
+                </div>
+
               <div class="col-md-3">
                 <p id ="Titre-Stage">Sep. - Nov. 2014</p>
                 <div id="textStage">
@@ -365,36 +388,10 @@
                   </div>
 
               </div>
-              <div class="col-md-3">
-                <p id ="Titre-Stage">Mai - Juin 2015</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">LCOMLOCAL</p>
-                  <p id="poste-Stage">Développeur Web</p>
-                  <p id="description-Stage">Stage développement web en Responsive Design et conseil en référencement</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-              <p id ="Titre-Stage">2015</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">Squart</p>
-                  <p id="poste-Stage">Chef de Projet</p>
-                  <p id="description-Stage">Création et développement d'un jeu mobile pour iOS 9 avec Swift</p>
-                  </div>
-              </div>
-
-              <div class="col-md-3">
-              <p id ="Titre-Stage">Février - Mai 2015</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">Kumquats</p>
-                  <p id="poste-Stage">Développeur Web & Mobile</p>
-                  <p id="description-Stage">- Concevoir l'architecture et le modèle de données d'une application web ou mobile </br> - Développement d'API avec le framework Symfony 2 </br> - Développement Front-end avec le framework ReactJS</p>
-                  </div>
-              </div>
-
-              </div>
-              </div>
-              </div>
-              </section>
+            </div>
+            </div>
+          </div>
+            </section>
 
 
 
@@ -544,6 +541,14 @@
 			</div>
 		</div>
 	</li>
+  <li>
+    <div class="ch-item ch-img-3">
+      <div class="ch-info">
+        <h3>Twelve's Light</h3>
+        <p>Mon site personnel<a href="http://www.twelves-light.com/">En Savoir Plus</a></p>
+      </div>
+    </div>
+  </li>
 	<li>
 		<div class="ch-item ch-img-2">
 			<div class="ch-info">
@@ -552,14 +557,14 @@
 			</div>
 		</div>
 	</li>
-	<li>
-		<div class="ch-item ch-img-3">
-			<div class="ch-info">
-				<h3>Twelve's Light</h3>
-				<p>Mon site personnel<a href="http://www.twelves-light.com/">En Savoir Plus</a></p>
-			</div>
-		</div>
-	</li>
+  <li>
+    <div class="ch-item ch-img-4">
+      <div class="ch-info">
+        <h3>Adenatis</h3>
+        <p>Commerce en scene - site Web <a href="http://www.commerces-en-scene.fr/">En Savoir Plus</a></p>
+      </div>
+    </div>
+  </li>
 </ul>
     </div>
      </section>
@@ -842,39 +847,39 @@
               <span class="fui-document"id="Titre-jumbotron"> <span id="Titre-Font-jumbotron">- Work Experience</span></span>
               <div id="container-Experience">
               <div class="row">
-              <div class="col-md-3">
-                <p id ="Titre-Stage">Sep. - Nov. 2014</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">Adenatis</p>
-                  <p id="poste-Stage">Web Developer</p>
-                  <p id="description-Stage">Internship Web development and Responsive Design</p>
-                  </div>
+                <div class="col-md-3">
+                <p id ="Titre-Stage">February - May 2016</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">Kumquats</p>
+                    <p id="poste-Stage">Web & Mobile Developer</p>
+                    <p id="description-Stage">- Designing web and mobile application </br> - API developement with Symfony 2 </br>- Front-end developement with ReactJS </p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                <p id ="Titre-Stage">2015</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">Squart</p>
+                    <p id="poste-Stage">Project Manager</p>
+                    <p id="description-Stage">Creation and development of a mobile game for iOS 9 using Swift</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                  <p id ="Titre-Stage">May - June 2015</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">LCOMLOCAL</p>
+                    <p id="poste-Stage">Web Developer</p>
+                    <p id="description-Stage">Internship Web development, Responsive Design and SEO consultancy</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                  <p id ="Titre-Stage">Sep. - Nov. 2014</p>
+                  <div id="textStage">
+                    <p id="nomEntreprise">Adenatis</p>
+                    <p id="poste-Stage">Web Developer</p>
+                    <p id="description-Stage">Internship Web development and Responsive Design</p>
+                    </div>
 
-              </div>
-              <div class="col-md-3">
-                <p id ="Titre-Stage">May - June 2015</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">LCOMLOCAL</p>
-                  <p id="poste-Stage">Web Developer</p>
-                  <p id="description-Stage">Internship Web development, Responsive Design and SEO consultancy</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-              <p id ="Titre-Stage">2015</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">Squart</p>
-                  <p id="poste-Stage">Project Manager</p>
-                  <p id="description-Stage">Creation and development of a mobile game for iOS 9 using Swift</p>
-                  </div>
-              </div>
-              <div class="col-md-3">
-              <p id ="Titre-Stage">February - May 2016</p>
-                <div id="textStage">
-                  <p id="nomEntreprise">Kumquats</p>
-                  <p id="poste-Stage">Web & Mobile Developer</p>
-                  <p id="description-Stage">- Designing web and mobile application </br> - API developement with Symfony 2 </br>- Front-end developement with ReactJS </p>
-                  </div>
-              </div>
+                </div>
               </div>
               </div>
               </div>
@@ -1028,6 +1033,17 @@
 			</div>
 		</div>
 	</li>
+
+  <li>
+    <div class="ch-item ch-img-3">
+      <div class="ch-info">
+        <h3>Twelve's Light</h3>
+        <p><a href="http://www.twelves-light.com/">Presonal Website</a></p>
+      </div>
+    </div>
+  </li>
+
+
 	<li>
 		<div class="ch-item ch-img-2">
 			<div class="ch-info">
@@ -1036,14 +1052,15 @@
 			</div>
 		</div>
 	</li>
-	<li>
-		<div class="ch-item ch-img-3">
-			<div class="ch-info">
-				<h3>Twelve's Light</h3>
-				<p><a href="http://www.twelves-light.com/">Presonal Website</a></p>
-			</div>
-		</div>
-	</li>
+
+  <li>
+    <div class="ch-item ch-img-4">
+      <div class="ch-info">
+        <h3>Adenatis</h3>
+        <p><a href="http://www.commerces-en-scene.fr/">Website</a></p>
+      </div>
+    </div>
+  </li>
 </ul>
     </div>
      </section>
