--- a/beta/index.html
+++ b/beta/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="author" content="Michel Kansou">
+    <link href="resources/images/icon.png" rel="icon" type="image/png" />
     <link rel="stylesheet" type="text/css" href="resources/css/semantic/semantic.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="resources/css/main.css">
-    <title>React.js + semantic </title>
+    <title>Michel Kansou</title>
   </head>
   <body>
       <div id="app" />
