--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
-    <meta name="author" content="Michel Kansou">
-    <link href="resources/images/icon.png" rel="icon" type="image/png" />
-    <link rel="stylesheet" type="text/css" href="resources/css/semantic/semantic.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="resources/css/main.css">
-    <title>Michel Kansou</title>
-  </head>
-  <body>
-      <div id="app" />
-      <script src="build/bundle.js" type="text/javascript"></script>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="author" content="Michel Kansou">
+        <link href="resources/images/icon.png" rel="icon" type="image/png" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+        <link rel="stylesheet" href="resources/css/main.css">
+        <title>Michel Kansou</title>
+    </head>
+    <body>
+        <main id="app"></main>
+        <script src="build/bundle.js" type="text/javascript"></script>
+    </body>
 </html>
