testing Google gtag

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <body>
         <main id="app"></main>
         <script src="build/bundle.js" type="text/javascript"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69121322-1"></script>
     </body>
 </html>
