--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
         <main id="app"></main>
         <script src="build/bundle.js" type="text/javascript"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69121322-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments)};
+          gtag('js', new Date());
+
+          gtag('config', 'UA-69121322-1');
+        </script>
     </body>
 </html>
