--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <body>
         <main id="app"></main>
         <script src="build/bundle.js" type="text/javascript"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69121322-1"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments)};
+          function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
           gtag('config', 'UA-69121322-1');
