--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
+        <meta name="description" content="I am a passionate Software Developer currently a student in fifth year of an engineering programme at eXia.CESI Arras.">
         <meta name="author" content="Michel Kansou">
+        <meta name="keywords" content="Software Developer, Mobile Developer, ReactJS, Swift">
         <link href="resources/images/icon.png" rel="icon" type="image/png" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
